fixed alignment color and font size inconsistencies on inputs, select boxes, and date picker

--- a/src/date-picker/styles.scss
+++ b/src/date-picker/styles.scss
@@ -31,7 +31,7 @@
   padding-left: 12px;
   padding-right: 12px;
   height: (43px - 6px);
-  padding-top: 4px;
+  padding-top: 1px;
   resize: none;
 
   font-family: $fontBase;
@@ -51,14 +51,14 @@
 
   // These are applied in order to modify the styling of the react dates package.
   :global(.SingleDatePickerInput) {
+    height: 30px;
+    padding-top: 3px;
     border: 0px;
-    height: 32px;
-    transform: translate(0px, -2.5px);
   }
   :global(.DateInput) {
     font-weight: $fontWeightBase;
     font-size: $fontSizeBase;
-    line-height: 28px;
+    line-height: 1;
     margin: 0px;
     padding: 0px;
     background-color: transparent;
@@ -71,7 +71,10 @@
     cursor: pointer;
     color: $grayCinder;
   }
-  :global(.SingleDatePicker) { width: 86px; }
+  :global(.SingleDatePicker) {
+    width: 96px;
+    text-align: center;
+  }
   :global(.SingleDatePicker__picker) { top: 48px; }
   :global(.DateInput__display-text) { color: $grayCinder; }
   :global(.DayPickerKeyboardShortcuts__show) { display: none; }
