--- a/src/date-range-picker/styles.scss
+++ b/src/date-range-picker/styles.scss
@@ -524,7 +524,7 @@ $brandPrimaryLight: #B6C6F6;
         user-select: none; }
 
     .DateInput__display-text {
-      height: 25px !important;
+      height: 24px !important;
       padding: 4px 6px;
       white-space: nowrap;
       overflow: hidden; }
@@ -677,8 +677,8 @@ $brandPrimaryLight: #B6C6F6;
   display: inline-block;
   padding-left: 4px;
   padding-right: 4px;
-  height: (43px - 6px);
-  padding-top: 4px;
+  height: 35px;
+  padding-top: 3px;
   resize: none;
 
   font-family: $fontBase;
@@ -688,7 +688,7 @@ $brandPrimaryLight: #B6C6F6;
   color: $grayDarker;
   background-color: #fff;
 
-  border: 1px solid $gray;
+  border: 1px solid $inputFieldBorderColor;
   border-radius: $borderRadiusBase;
 
   // On active, remove outline and add a border color.
@@ -704,19 +704,20 @@ $brandPrimaryLight: #B6C6F6;
     }
     .DateRangePickerInput__arrow {
       position: relative;
-      top: 8px;
+      top: 5px;
     }
     .DateInput {
-      width: 86px;
-      font-weight: $fontWeightBase;
-      font-size: $fontSizeBase;
-      line-height: 28px;
-      margin: 0px;
-      padding: 0px;
-      background-color: transparent;
       position: static;
       display: block;
       vertical-align: middle;
+      width: 96px;
+      padding: 0px;
+      margin: 0px;
+      background-color: transparent;
+      font-weight: $fontWeightBase;
+      font-size: $fontSizeBase;
+      line-height: 24px;
+      text-align: center;
     }
     .DateInput:first-child { margin-right: 8px; }
     .DateInput:last-child { margin-left: 8px; }
@@ -725,6 +726,7 @@ $brandPrimaryLight: #B6C6F6;
       left: 50%;
     }
     input[type=text] {
+      padding: 0;
       cursor: pointer;
       color: $grayCinder;
     }
